Development Portal (2017-10-19 shi)
==============================
Use @aid over @ref in participating-org links in SAVi
Fix transaction columns
Minor css updates
Display reporting-org@ref as a link to publisher page
Add more document-link types
Update all themes with new elements


Development Portal (2017-10-17 shi)
==============================
Fix layout for result in SAVi
Group indicator span-title and description
Add iati_codes json for @org_type and @org_role
Sort document-link


Development Portal (2017-10-16 shi)
==============================
Added default and more selector attributes for document-link
Only display sector graph without sector spans
Minor css fixes
Wrap <narrative> around participating-org if absent
Group participating-org roles
Update settings css
Fixed viewport in q.html in activities.xsl
Removed recipient-country if empty
Fix timeline for results between dates


Development Portal (2017-10-15 shi)
==============================
Update layout for results in SAVi
Update all themes with new layout
Remove recipient-country div when empty
Fix SAVi budget layout in Print-Friendly
Display reference vocab and code in SAVi
Change position of baseline-year below baseline-value


Development Portal (2017-10-13 shi)
==============================
Updated document-link section in SAVi
Move document-link section in SAVi
Display doc types and icons for document-link
Updated colours for all themes
Minor css fixes


Development Portal (2017-10-09 shi)
==============================
Added search icon to explore section in resulting pages
Fix padding search icons in dropdown
Minor css updates to all rgba themes
Currently supporting a total of 6 themes (rgba)
Added all themes as dropdown choices in main site


Development Portal (2017-09-26 shi)
==============================
Add table alert to change years at the bottom of all graphs
Update minor css for original and Print-Friendly
Add translations for new table alert
Update translations