@@ -1,3 +1,9 @@
+Development Portal (2017-10-20 shi)
+==============================
+Add capitalised participating-org @role in SAVi
+Update Print-friendly css
+
+
 Development Portal (2017-10-19 shi)
 ==============================
 Use @aid over @ref in participating-org links in SAVi
